# mate-notification-daemon

./: configure.ac
data/: Makefile.am
po/: POTFILES.in
src/daemon/: daemon.c
